# lincy-agent

./: .gitignore  .rule  README.md  pyproject.toml  pyrightconfig.json
cfgs/: agent.yaml  supervisor.yaml
docs/dev/: agent-task-system.md  codex-cache-survival.md  copilot-agent-hint.md  copilot-staged-planning.md  gui-computer-use.md  heartbeat.md  index.md  macos-app-tools.md  provider-api-spec.md  provider-architecture.md  web-dashboard.md  (+2 more)
scripts/: eval_conscience_agent.py  eval_haiku45_profile_ab.py  probe_ollama_native.py  repro_memory_edit.py  repro_memory_edit_dedup.py  validate_llm.py  verify_anthropic_cache.py  verify_cache_behavior.py  verify_claude_code_cache_behavior.py  verify_openai_cache.py
tests/: conftest.py  test_bm25_index_descriptions.py  test_bm25_search.py  test_chat_proxy_cli.py  test_claude_code_proxy.py  test_claude_code_proxy_app.py  test_claude_code_proxy_auth.py  test_codex_proxy.py  test_codex_proxy_app.py  test_codex_proxy_auth.py  test_context_builder.py  test_context_refresh.py  test_control.py  test_conversation.py  test_copilot_proxy.py  test_copilot_proxy_auth.py  test_executor.py  test_grok_proxy_auth.py  test_grok_proxy_service.py  test_icloud_sync_awareness.py  test_macos_permissions_warmup.py  test_main_tty.py  test_memory_backup.py  test_memory_editor.py  test_memory_editor_planner.py  test_memory_hooks.py  test_memory_index_kind.py  test_memory_tool_analysis.py  test_pdf_utils.py  test_security.py  test_send_message_batch_guidance.py  test_shell_task.py  test_tools.py  test_turn_timing.py  test_web_fetch.py  test_web_search.py
(+555 files in other folders)
