[project]
name = "lincy"
version = "0.1.0"
description = "An AI companion that feels like a real person"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "discord.py-self<2.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "textual>=0.82",
    "Pillow>=10.0",
    "pyautogui>=0.9.54",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jieba>=0.42",
    "rank-bm25>=0.2.2",
    "watchfiles>=1.0",
    "markdownify>=1.2.2",
    "cachetools>=7.0.5",
    "pymupdf>=1.27.2.2",
]

[project.scripts]
chat-cli = "lincy.__main__:run"
chat-supervisor = "chat_supervisor.__main__:main"
proxy = "chat_proxy.__main__:main"
chat-web-api = "chat_web_api.__main__:main"
permissions-warmup = "lincy.macos_permissions_warmup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lincy", "src/chat_supervisor", "src/chat_proxy", "src/copilot_proxy", "src/codex_proxy", "src/claude_code_proxy", "src/grok_proxy", "src/chat_web_api"]

[tool.uv.workspace]
members = [
    ".agent/uv-test",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]

[dependency-groups]
dev = [
    "anthropic>=0.84.0",
    "detect-secrets>=1.5.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.0",
]
